welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value a
  if (a!=b){
      ^withoutDoubles:2: error: not found: value b
  if (a!=b){
         ^withoutDoubles:3: error: not found: value a
    return a+b
           ^withoutDoubles:3: error: not found: value b
    return a+b
             ^withoutDoubles:5: error: not found: value a
  if (a==6){
      ^withoutDoubles:8: error: not found: value a
  return 2*a
           ^