welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (a!=b){
    return a+b
  }
  if (a==6){
    return 7
  }
  return 2*a
}